Examples/test-suite/errors/pp_invalid_exponents.i
%module xxx

#if 123e
#endif

#if 456.e
#endif
